update properties file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -8,3 +8,33 @@ env = qe
 url = https://www.google.com/
 #drivers path
 driver = C:/Users/Administrator/drivers
+#os
+windows = windows
+linux = linux
+mac = mac
+#env
+qe = qe
+staging = staging
+prod = prod
+#browser
+chrome = chrome
+firefox = firefox
+iexplorer = iexplorer
+#repo
+java-automations = https://github.com/th33ngi/java-automations.git
+#branch
+main = main
+dev = dev
+#testSuite
+all = all
+testng = testng.xml
+smoke = smoke.xml
+regression = regression.xml
+#testSuitePath
+suitePath = ./src/test/java/
+#appurl
+app-url = https://www.google.com/
+#appVersion 
+v1 = v0.0.1
+v2 = v0.1.1
+v3 = v1.0.0 
