--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -21,7 +21,7 @@ chrome = chrome
 firefox = firefox
 iexplorer = iexplorer
 #repo
-java-automations = https://github.com/th33ngi/java-automations.git
+javaautomations = https://github.com/th33ngi/java-automations.git
 #branch
 main = main
 dev = dev
