update config file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -33,7 +33,7 @@ regression = regression.xml
 #testSuitePath
 suitePath = ./src/test/java/
 #appurl
-app-url = https://www.google.com/
+appurl = https://www.google.com/
 #appVersion 
 v1 = v0.0.1
 v2 = v0.1.1
