update config file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -23,8 +23,7 @@ iexplorer = iexplorer
 #repo
 javaautomations = https://github.com/th33ngi/java-automations.git
 #branch
-main = main
-dev = dev
+branch = main,dev,...
 #testSuite
 all = all
 testng = testng.xml
@@ -36,5 +35,3 @@ suitePath = ./src/test/java/
 appurl = https://www.google.com/
 #appVersion 
 v1 = v0.0.1
-v2 = v0.1.1
-v3 = v1.0.0 
