update config file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -23,7 +23,7 @@ iexplorer = iexplorer
 #repo
 javaautomations = https://github.com/th33ngi/java-automations.git
 #branch
-branch = main,dev,...
+branch = main,dev
 #testSuite
 all = all
 testng = testng.xml
