--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -1,11 +1,3 @@
-# set a OS windows or linux
-os = win
-#set a Browser chrome or firefox
-browser = chrome
-#set an environment qe uat prod
-env = qe
-#set the main url
-url = https://www.google.com/
 #drivers path
 driver = C:/Users/Administrator/drivers
 #os
@@ -21,7 +13,8 @@ chrome = chrome
 firefox = firefox
 iexplorer = iexplorer
 #branch
-branch = main,dev
+main = main
+dev = dev
 #testSuite
 all = all
 testng = testng.xml
@@ -30,6 +23,6 @@ regression = regression.xml
 #testSuitePath
 suitePath = ./src/test/java/
 #appurl
-appurl = https://www.google.com/
+appUrl = https://www.google.com/
 #appVersion 
-v1 = v0.0.1
+appVersion = v0.0.1
