update config file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -12,6 +12,12 @@ prod = prod
 chrome = chrome
 firefox = firefox
 iexplorer = iexplorer
+#repository
+repo1 =
+repo2 =
+#credentials
+gitPublicSsh = git-public-ssh
+gitPrivateSsh = git-private-ssh
 #branch
 main = main
 dev = dev
