update config file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -12,9 +12,10 @@ prod = prod
 chrome = chrome
 firefox = firefox
 iexplorer = iexplorer
+#project
+project = java-maven-automation-example
 #repository
-repo1 =
-repo2 =
+repository = https://github.com/th33ngi/
 #credentials
 gitPublicSsh = git-public-ssh
 gitPrivateSsh = git-private-ssh
