--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -1,5 +1,7 @@
 #drivers path
 driver = C:/Users/Administrator/drivers
+platform = windows
+browser = chrome
 #os
 windows = windows
 linux = linux
@@ -18,8 +20,8 @@ testng = testng.xml
 smoke = smoke.xml
 regression = regression.xml
 #testSuitePath
-suitePath = ./src/test/java/
+suitepath = ./src/test/java/
 #appurl
-appUrl = https://www.google.com/
+appurl = https://www.google.com/
 #appVersion 
-appVersion = v0.0.1
+appversion = v0.0.1
