update BasePage class and config file

--- a/src/main/java/com/focus/config/config.properties
+++ b/src/main/java/com/focus/config/config.properties
@@ -1,5 +1,7 @@
 #drivers path
-driver = C:/Users/Administrator/drivers
+windrivers = C:/Users/Administrator/drivers
+linuxdrivers = /usr/local/bin/
+macdrivers = /usr/local/bin/
 platform = windows
 browser = chrome
 #os
